--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./"
   },
   "author": "",
   "license": "ISC",
@@ -12,4 +12,5 @@
     "crypto": "^1.0.1",
     "express": "^4.16.2"
   }
+
 }
