added socket.io dependency

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "crypto": "^1.0.1",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "socket.io":"^2.0.4"
   }
 
 }
